--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,9 @@ script:
   - npm run lint
   - npm run test:ci
   - npm run build
+
+deploy:
+  provider: npm
+  api_key: "2de7bbaf-1288-4bdd-93f7-f79bccc33329"
+  on:
+    tags: true
