--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "scripts": {
     "lint": "eslint --ext .js src",
-    "test:ci": "BABEL_ENV=test nyc --reporter=html --reporter=lcovonly --reporter=text mocha --require babel-core/register -R spec",
+    "test:ci": "BABEL_ENV=test nyc --reporter=lcovonly mocha --require babel-core/register -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "test": "BABEL_ENV=test mocha --require babel-core/register -R nyan -w",
     "build": "BABEL_ENV=production rollup --config"
   },
@@ -46,6 +46,7 @@
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.6.0",
     "chai": "^4.1.2",
+    "coveralls": "^3.0.0",
     "eslint": "^4.8.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.7.0",
@@ -53,6 +54,7 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
     "mocha": "^4.0.1",
+    "mocha-lcov-reporter": "^1.3.0",
     "nyc": "^11.2.1",
     "rollup": "^0.50.0",
     "rollup-plugin-babel": "^3.0.2",
