--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,16 @@ script:
   - npm run lint
   - npm run test:ci
   - npm run build
+  - if [ $TRAVIS_BRANCH == 'master' ]; then npm run release; fi
 
 deploy:
-  provider: npm
-  email: "techleadcommunity@norauto.com"
-  api_key: $NPM_TOKEN
-  on:
-    tags: true
+  - provider: npm
+    email: "techleadcommunity@norauto.com"
+    api_key: $NPM_TOKEN
+    on:
+      tags: true
+  - provider: releases
+    api_key: $GITHUB_TOKEN
+    skip_cleanup: true
+    on:
+      branch: master
