--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ script:
   - npm run lint
   - npm run test:ci
   - npm run build
-  - if [ $TRAVIS_BRANCH == 'master' ]; then npm run release; fi
+  #- if [ $TRAVIS_BRANCH == 'master' ]; then npm run release; fi
+  - npm run release
 
 deploy:
   - provider: npm
