--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@norauto/log4js2-ajax-appender",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "An AJAX appender for log2js2 module.",
   "main": "./bundles/ajax-appender.umd.js",
   "typings": "./src/ajax-appender.d.ts",
@@ -33,7 +33,7 @@
     "test:ci": "BABEL_ENV=test nyc --reporter=lcovonly mocha --require babel-core/register -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "test": "BABEL_ENV=test mocha --require babel-core/register -R nyan -w",
     "build": "BABEL_ENV=production rollup --config",
-    "release": "standard-version --commit-all"
+    "release": "standard-version --commit-all && git push https://${GITHUB_TOKEN}@github.com/Norauto/log4js2-ajax-appender.git --follow-tags origin HEAD"
   },
   "dependencies": {
     "axios": "^0.18.0",
