--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,7 @@ script:
   - npm run lint
   - npm run test:ci
   - npm run build
-  #- if [ $TRAVIS_BRANCH == 'master' ]; then npm run release; fi
-  - npm run release
+  - if [ $TRAVIS_BRANCH == 'master' ]; then npm run release; fi
 
 deploy:
   - provider: npm
@@ -15,8 +14,3 @@ deploy:
     api_key: $NPM_TOKEN
     on:
       tags: true
-  - provider: releases
-    api_key: $GITHUB_TOKEN
-    skip_cleanup: true
-    on:
-      branch: master
