fix(build): Debug env vars for Travis PRs builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ script:
   - npm run lint
   - npm run test:ci
   - npm run build
-  - echo $TRAVIS_BRANCH
+  - echo $TRAVIS_BRANCH && echo $TRAVIS_PULL_REQUEST
 
 deploy:
   - provider: npm
