--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,17 @@ language: node_js
 node_js:
   - "node"
 
+env:
+  - CAN_PUBLISH=$(sh ./.can-publish.sh)
 script:
   - npm run lint
   - npm run test:ci
   - npm run build
-  - if [ $TRAVIS_BRANCH == 'master' ]; then npm run release; fi
+  - if [ $TRAVIS_BRANCH == 'master' ] && [ $TRAVIS_PULL_REQUEST == 'false' ]; then npm run release; fi
 
 deploy:
   - provider: npm
     email: "techleadcommunity@norauto.com"
     api_key: $NPM_TOKEN
     on:
-      branch: master
+      condition: "$CAN_PUBLISH = 'true'"
