--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: node_js
 node_js:
   - "node"
 
+branches:
+  except:
+    - /^v([0-9]+\.?)+/
 env:
   - CAN_PUBLISH=$(sh ./.can-publish.sh)
 script:
@@ -9,7 +12,7 @@ script:
   - npm run test:ci
   - npm run build
   - if [ $TRAVIS_BRANCH == 'master' ] && [ $TRAVIS_PULL_REQUEST == 'false' ]; then npm run release; fi
-
+  - echo "Can publish ? $CAN_PUBLISH"
 deploy:
   - provider: npm
     email: "techleadcommunity@norauto.com"
